objects/Train__c.object
<CustomObject>
    <fields>
        <fullName>Controlling__c</fullName>
        <label>Controlling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Senthil</fullName>
                </value>
                <value>
                    <fullName>Rajan</fullName>
                </value>
                <value>
                    <fullName>Karthik</fullName>
                </value>
                <value>
                    <fullName>KD</fullName>
                </value>
                <value>
                    <fullName>Vishwa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Controlling__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Hyderbad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Train_Name__c</fullName>
        <label>Train Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Train</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Train Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trains</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>